force-app/main/default/objects/Agent_Action_Log__c/Agent_Action_Log__c.object-meta.xml
<CustomObject>
    <label>Agent Action Log</label>
    <nameField>
        <displayFormat>AAL-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>