force-app/main/default/objects/Agent_Action_Log__c/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>Action Taken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>