force-app/main/default/objects/Agent_Action_Log__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Agent Action Logs</relationshipLabel>
    <relationshipName>Agent_Action_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>