force-app/main/default/objects/Agent_Action_Log__c/listViews/All_Agent_Action_Logs.listView-meta.xml
<ListView>
    <fullName>All_Agent_Action_Logs</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>Action_Taken__c</columns>
    <columns>Details__c</columns>
    <columns>Timestamp__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Agent Action Logs</label>
</ListView>